--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://govindrajmohan.github.io/portfolio",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -34,9 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
